--- a/client/src/components/sidebar/sidebar.module.scss
+++ b/client/src/components/sidebar/sidebar.module.scss
@@ -1,97 +1,74 @@
-
-
 .container {
     display: flex;
     .sidebar {
-        max-height: 100vh;
         border-right: 1px solid #E6E4F0;
         position: relative;
         padding: 0 24px;
-
         .logo-container {
             padding: 17% 0% 0% 10%;
             font-size: 1.5rem;
             text-decoration: none;
             color: black;
-
             .side-logo {
                 // padding-left: 10%;
                 margin-left: 10%;
                 margin-top: 10%;
             }
         }
-
-
-
         .side-links-container {
-            height: 42vh;
             border-bottom: 1px solid #E6E4F0;
         }
-
         .side-project-container {
-            height: 26vh;
             padding: 0 10px;
             color: #9896A3;
-
+            margin-bottom: 20px;
             .project-text-and-icon {
                 display: flex;
                 justify-content: space-between;
                 margin-top: 5%;
-
-
+                margin-bottom: 20px;
                 .projectstext {
                     color: #D3D2DC;
                 }
-
                 .plus-icon {
                     margin-right: 5%;
                 }
             }
-
-
             .side-project-container-baby {
                 margin-top: 5%;
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
             }
-
             .example-project {
                 color: #9896A3;
-
                 display: flex;
                 margin-bottom: 10px;
                 text-decoration: none;
-
-                border-radius: 15%;
-
-
+                padding: 7px 10px;
+                border-radius: 10px;
+                &:hover{
+                    background-color: rgba(108, 108, 108, 0.46);
+                    color: white;
+                }
                 .project-icon {
                     min-width: 22px;
                     max-width: 22px;
                     margin-right: 10px;
                 }
-
             }
         }
-
-
-
     }
-
-
-
 
     .light {
         font-weight: 300;
     }
-
     .regular {
         font-weight: 400;
     }
-
     .semi-bold {
         font-weight: 600;
     }
-
-
     .medium {
         font-weight: 500;
     }
