--- a/client/src/components/kanban/Kanban.module.scss
+++ b/client/src/components/kanban/Kanban.module.scss
@@ -32,6 +32,12 @@
     gap: 5px;
     flex-wrap: wrap;
   }
+  .cardBottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
 }
 
 .statusSquare {
